if applied this commit will fix overlay of navigation bar on mobile devices

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -6,6 +6,7 @@
 .navbar {
     margin-bottom: 0;
     height: 5vh;
+    z-index: 1;
 }
 
 .content {
